--- a/README
+++ b/README
@@ -1,1 +1,12 @@
+Partition of Tasks:
+Jia Gapuz - System Architecture Diagrams and Descriptions
+Claudia Gonzalez - General description and figure descriptions. 
+Deepanshu Joshi - UML Diagram and Description, End of the week
+JJ Hafidh - Descriptions, some Classes
+
+Timeline: 
+Jia Gapuz - 4 hours
+Claudia Gonzalez - 4 hours. 
+Deepanshu Joshi-  3 hours
+JJ Hafidh - 2 hours
 
